# pgmq-relay

./: .dockerignore  .env.example  BUILD.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
brokers_tests/: README.md  pytest.ini  requirements.txt  test_broker_relay.py
docker/: config-docker.toml  init-db.sql  test-messages.sql
scripts/: send_test_messages.sh  test-all.sh
src/: broker.rs  circuit_breaker.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  metrics_server.rs  metrics_service.rs  pgmq_client.rs  relay.rs  transformer.rs  validator.rs
src/brokers/: kafka.rs  mod.rs  nats.rs  rabbitmq.rs
tests/: integration_tests.rs  transformer_tests.rs
